--- a/configs/product-service.yml
+++ b/configs/product-service.yml
@@ -1,4 +1,4 @@
-spring:
+Spring:
  datasource:
   driver-class-name:  com.mysql.jdbc.Driver
   url:  jdbc:mysql://localhost:3306/eshopdb?useUnicode=true&amp;useJDBCCompliantTimezoneShift=true&amp;useLegacyDatetimeCode=false&amp;serverTimezone=UTC
