--- a/cart-service/pom.xml
+++ b/cart-service/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
         <!-- MySQL +++++++++++++++++++++++++++++++++++++++++ -->
         <dependency>
             <groupId>mysql</groupId>
