--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
         <!-- MySQL +++++++++++++++++++++++++++++++++++++++++ -->
         <dependency>
             <groupId>mysql</groupId>
