--- a/order-service/src/main/resources/bootstrap.yml
+++ b/order-service/src/main/resources/bootstrap.yml
@@ -1,11 +1,24 @@
+#  server.port= 8081
+#  spring.application.name= order-service
+#  eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+#  management.endpoints.web.exposure.include= hystrix.stream
+
 server:
   port: 8081
 
 spring:
   application:
     name: order-service
+
   cloud:
     config:
       enabled:  true
       uri: http://localhost:8888
       fail-fast: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: hystrix.stream, info, health
+      base-path: /
