--- a/order-service/src/main/resources/bootstrap.yml
+++ b/order-service/src/main/resources/bootstrap.yml
@@ -20,5 +20,5 @@ management:
   endpoints:
     web:
       exposure:
-        include: hystrix.stream, info, health
-      base-path: /
+        include: hystrix.stream, info, health, hystrixstream
+        base-path: /
