Sent message to Kafka concerning actions with cart

--- a/kafka-service/src/main/resources/application.properties
+++ b/kafka-service/src/main/resources/application.properties
@@ -6,9 +6,9 @@ eureka.client.serviceUrl.default-zone=http://localhost:8761/eureka/
 
 spring.application.name=kafka-service
 
-#cloud.config.enabled=true
-#cloud.config.uri=http://localhost:8888
-#cloud.config.fail-fast=true
+#cloud.configure.enabled=true
+#cloud.configure.uri=http://localhost:8888
+#cloud.configure.fail-fast=true
 
 zookeeper.host=localhost:2181
 
