Organize sending json to Kafka from cart-service

--- a/kafka-service/src/main/resources/application.properties
+++ b/kafka-service/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.application.name=kafka-service
 zookeeper.host=localhost:2181
 
 kafka.bootstrap.servers=localhost:9092
-kafka.key=key2
+kafka.key=eshop
 kafka.template.default-topic=julia_topic
 kafka.consumer.bootstrap-servers.auto-offset-reset=earliest
 kafka.consumer.bootstrap-servers.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
