Add Kafka Consumer functionality

--- a/kafka-service/src/main/resources/application.properties
+++ b/kafka-service/src/main/resources/application.properties
@@ -15,6 +15,8 @@ zookeeper.host=localhost:2181
 kafka.bootstrap.servers=localhost:9092
 kafka.key=eshop
 kafka.template.default-topic=julia_topic
+kafka.consumer.group-id=test
+
 kafka.consumer.bootstrap-servers.auto-offset-reset=earliest
 kafka.consumer.bootstrap-servers.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 kafka.consumer.bootstrap-servers.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
