Kafka Producer/Consumer v3 based on @KafkaListener, KafkaConfiguration

--- a/kafka-service/src/main/resources/application.properties
+++ b/kafka-service/src/main/resources/application.properties
@@ -1,30 +1,25 @@
 server.port=9000
+spring.application.name=kafka-service
 
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.default-zone=http://localhost:8761/eureka/
+zookeeper.host=localhost:2181
 
-spring.application.name=kafka-service
+spring.kafka.bootstrap-servers=localhost:9092 
+spring.kafka.topic=julia_topic
+
+spring.kafka.producer.acks=all
+spring.kafka.producer.compression-type=snappy
+
+spring.kafka.consumer.group-id=test
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=100
 
 #cloud.configure.enabled=true
 #cloud.configure.uri=http://localhost:8888
 #cloud.configure.fail-fast=true
-
-zookeeper.host=localhost:2181
-
-kafka.bootstrap.servers=localhost:9092
-kafka.key=eshop
-kafka.template.default-topic=julia_topic
-kafka.consumer.group-id=test
-
-kafka.consumer.bootstrap-servers.auto-offset-reset=earliest
-kafka.consumer.bootstrap-servers.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-kafka.consumer.bootstrap-servers.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-kafka.producer.bootstrap-servers.auto-offset-reset=earliest
-kafka.producer.bootstrap-servers.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-kafka.producer.bootstrap-servers.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-
-
 
 
 
