--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -23,6 +23,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring-cloud.version>Hoxton.RC2</spring-cloud.version>
         <org.slf4j-version>1.7.5</org.slf4j-version>
+        <swagger.version>2.9.2</swagger.version>
     </properties>
 
     <!--Spring Boot-->
@@ -54,10 +55,17 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+        <!-- Swagger-->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
+            <version>${swagger.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger.version}</version>
         </dependency>
 
         <!-- MySQL +++++++++++++++++++++++++++++++++++++++++ -->
