Move URL strings to application.properties files

--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 product-service-url=http://product-service/products/api/
+user-service-url=http://user-service/users/
 kafka-service-url=http://kafka-service/kafka/send?key=
