--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -4,8 +4,35 @@ server:
 spring:
   application:
     name: user-service
-  cloud:
-    config:
-      enabled:  true
-      uri: http://localhost:8888
-      fail-fast: true
+#  cloud:
+#    config:
+#      enabled:  true
+#      uri: http://localhost:8888
+#      fail-fast: true
+
+  datasource:
+    driver-class-name:  com.mysql.jdbc.Driver
+    url:  jdbc:mysql://eshopdb.c9dhxqjjbxi8.eu-central-1.rds.amazonaws.com:3306/eshopdb?useUnicode=true&amp;useJDBCCompliantTimezoneShift=true&amp;useLegacyDatetimeCode=false&amp;serverTimezone=UTC
+    username: julia
+    password: juliajulia
+#    url:  jdbc:mysql://localhost:3306/eshopdbMS?useUnicode=true&amp;useJDBCCompliantTimezoneShift=true&amp;useLegacyDatetimeCode=false&amp;serverTimezone=UTC
+#    username: julia
+#    password: julia
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        dialect:  org.hibernate.dialect.MySQL5Dialect
+        ddl-auto: none
+      hikari:
+        minimum-idle: 5
+        maximum-pool-size:  10
+
+
+eureka:
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+#      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://ec2-18-194-232-3.eu-central-1.compute.amazonaws.com:8761/eureka/
