Unit tests for UserRestController

--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -103,6 +103,18 @@
             <version>20180813</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.4</version>
+        </dependency>
+
         <!--H2 for testing -->
         <dependency>
             <groupId>com.h2database</groupId>
@@ -126,6 +138,7 @@
         </dependency>
 
         <!--Test +++++++++++++++++++++++++++++++++++++++ -->
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -154,12 +167,6 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.jayway.jsonpath</groupId>
-            <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
 
